Hopefully done Davit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.BudgetBot"
         tools:targetApi="31">
         <activity
+            android:name=".OrderDone"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SetAddress"
             android:exported="false">
             <meta-data
@@ -77,31 +84,27 @@
         <activity
             android:name=".LampsActivity"
             android:exported="false"
-            android:parentActivityName=".SearchRecommendation" >
+            android:parentActivityName=".SearchRecommendation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.budgetbot.SearchRecommendation"/>
-
+                android:value="com.example.budgetbot.SearchRecommendation" />
         </activity>
         <activity
             android:name=".TableActivity"
             android:exported="false"
-            android:parentActivityName=".SearchRecommendation" >
+            android:parentActivityName=".SearchRecommendation">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.budgetbot.SearchRecommendation"/>
-
+                android:value="com.example.budgetbot.SearchRecommendation" />
         </activity>
         <activity
             android:name=".ChairActivity"
             android:exported="false"
             android:parentActivityName=".SearchRecommendation">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.budgetbot.SearchRecommendation"/>
-
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.budgetbot.SearchRecommendation" />
         </activity>
-
         <activity
             android:name=".SearchRecommendation"
             android:exported="false"
